--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@huggingface/hub": "^0.14.2",
     "@material-tailwind/react": "^2.1.9",
     "autoprefixer": "10.4.14",
     "ckbox": "^2.3.1",
@@ -26,6 +27,16 @@
     "react-dom": "18.2.0",
     "react-quill": "^2.0.0",
     "react-toastify": "^10.0.4",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "ts-node": "^10.9.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.26",
+    "@types/prop-types": "^15.7.11",
+    "@types/quill": "^2.0.14",
+    "@types/react": "^18.2.65",
+    "@types/react-dom": "^18.2.21",
+    "@types/react-transition-group": "^4.4.10",
+    "@types/scheduler": "^0.16.8"
   }
 }
