--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-quill": "^2.0.0",
+    "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.4",
     "tailwindcss": "3.3.2",
     "ts-node": "^10.9.2"
