--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@material-tailwind/react": "^2.1.9",
     "autoprefixer": "10.4.14",
     "ckbox": "^2.3.1",
+    "cors": "^2.8.5",
     "encoding": "^0.1.13",
     "firebase": "^9.23.0",
     "next": "13.4.7",
+    "nextjs-cors": "^2.2.0",
     "postcss": "8.4.24",
     "preline": "^2.0.3",
     "react": "18.2.0",
