--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@huggingface/hub": "^0.14.2",
     "@material-tailwind/react": "^2.1.9",
     "autoprefixer": "10.4.14",
+    "axios": "^1.6.8",
     "ckbox": "^2.3.1",
     "cors": "^2.8.5",
+    "debug": "^4.3.4",
     "encoding": "^0.1.13",
     "firebase": "^9.23.0",
     "next": "13.4.7",
@@ -30,6 +32,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.4",
+    "supports-color": "^8.1.1",
     "tailwindcss": "3.3.2",
     "ts-node": "^10.9.2"
   },
