--- a/package.json
+++ b/package.json
@@ -45,5 +45,12 @@
     "@types/react-dom": "^18.2.21",
     "@types/react-transition-group": "^4.4.10",
     "@types/scheduler": "^0.16.8"
+  },
+    "browserslist": [
+      "chrome 64",
+      "edge 79",
+      "firefox 67",
+      "opera 51",
+      "safari 12"
+    ]
   }
-}
